# WAM

WAM/Basics_Programs/CartPos/: CMakeCache.txt  CMakeLists.txt  Makefile  NN2.cpp  NN2.cpp~  cmake_install.cmake
WAM/Basics_Programs/DATALOG_JPos_TXT/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  exp2.txt
WAM/Basics_Programs/DATALOG_JTor_0/: CMakeLists.txt~  DL_JTor.cpp  DL_JTor.cpp~  DL_JTor_TXT.cpp~  DL_Jpos_TXT.cpp~  LockJoints.cpp~  Makefile  Time.cpp~  exp.txt~
WAM/Basics_Programs/DATALOG_NO_TORQUE/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  testdata.txt
WAM/Basics_Programs/DL_TORQUE/: CMakeCache.txt  CMakeLists.txt  DL_JTor_TXT.cpp~  DL_TORQUE.cpp  DL_TORQUE.cpp~  Makefile  cmake_install.cmake  stdhdr.h~
WAM/Basics_Programs/DL_TOR_TXT/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  (+5 more)
WAM_AND_LABJACK/FT_Sensor _Reading/: CMakeCache.txt  CMakeLists.txt~  FT_READ.cpp  FT_READ.cpp~  Makefile  cmake_install.cmake
WAM_AND_LABJACK/JPos/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  POS  POS.cpp  cmake_install.cmake
WAM_AND_LABJACK/Robust_IC/: CMakeCache.txt  CMakeLists.txt~  FT_READ.cpp~  Makefile  NN.cpp~  Robust_IC.cpp~  cmake_install.cmake
WAM_AND_LABJACK/Robust_IC_J1/: CMakeCache.txt  Makefile  Robust_IC.cpp~  cmake_install.cmake
WAM_AND_LABJACK/Robust_IC_J2/: AIAO.cpp~  CMakeCache.txt  Makefile  Robust_IC.cpp  Robust_IC.cpp~  cmake_install.cmake
WAM_AND_LABJACK/Robust_IC_J3/: CMakeLists.txt  POS.cpp~  Reference.txt  Robust_IC.cpp
WAM_AND_LABJACK/Robust_IC_J4/: Robust_IC.cpp
(+67 files in other folders)
